--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,30 +1,30 @@
 body{
-            background-color: #1A1A1A;
-            color:#99FF33;
-            font-family: monospace;
-        }
-        #wrapper{
-            width: 52%;
-            margin-left: 24%;
-        }
-        a:link{
-            color:#ffffff;
-            text-decoration: none;
-        }
-        a:visited{
-            color:#ffffff;
-            text-decoration: none;
-        }
-        a:hover{
-            color:#ffffff;
-            text-decoration: underline;
-        }
-        pre{
-            text-align: center;
-        }
-        button{
-            background-color: #000000;
-            color: #ffffff;
-        }
-        #sensorVal{
-        }
+    background-color: #1A1A1A;
+    color:#fafafa;
+    font-family: monospace;
+}
+#wrapper{
+    width: 52%;
+    margin-left: 24%;
+}
+a:link{
+    color:#ffffff;
+    text-decoration: none;
+}
+a:visited{
+    color:#ffffff;
+    text-decoration: none;
+}
+a:hover{
+    color:#ffffff;
+    text-decoration: underline;
+}
+pre{
+    text-align: center;
+}
+button{
+    background-color: #000000;
+    color: #ffffff;
+}
+#sensorVal{
+}
